[gd_scene load_steps=4 format=3 uid="uid://d1tnegb4rajyp"]

[ext_resource type="Script" path="res://scripts/combat/testing/goap_ai_testing.gd" id="1_a2lvv"]
[ext_resource type="PackedScene" uid="uid://dira860s41xvs" path="res://scenes/combat/creatures/goap_test_bot.tscn" id="1_wnt0l"]
[ext_resource type="PackedScene" uid="uid://djxjpynabyfcs" path="res://scenes/combat/obstacles/combat_obstacle_boulder.tscn" id="2_h8dch"]

[node name="GoapAITesting" type="Node2D"]
script = ExtResource("1_a2lvv")

[node name="Debug" type="Node" parent="."]

[node name="CurrentPlanText" type="TextEdit" parent="Debug"]
offset_left = 64.0
offset_top = 448.0
offset_right = 384.0
offset_bottom = 1024.0

[node name="GoalsText" type="TextEdit" parent="Debug"]
offset_left = 448.0
offset_top = 448.0
offset_right = 768.0
offset_bottom = 1024.0

[node name="Button" type="Button" parent="Debug"]
offset_left = 64.0
offset_top = 64.0
offset_right = 256.0
offset_bottom = 128.0
text = "Take Damage"

[node name="DebugStateText" type="TextEdit" parent="Debug"]
offset_left = 832.0
offset_top = 704.0
offset_right = 1088.0
offset_bottom = 1024.0

[node name="CombatObstacleBoulder" parent="." instance=ExtResource("2_h8dch")]
position = Vector2(1320, 400)

[node name="CombatObstacleBoulder2" parent="." instance=ExtResource("2_h8dch")]
position = Vector2(1784, 224)

[node name="GoapTestBot" parent="." instance=ExtResource("1_wnt0l")]
position = Vector2(1568, 672)

[node name="GoapTestBot2" parent="." instance=ExtResource("1_wnt0l")]
position = Vector2(1568, 96)
